<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/name"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>

        <TableLayout
            android:id="@+id/ingredient_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TableRow>

                <EditText
                    android:id="@+id/ingredient_volume"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/ingredient_volume"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/ingredient_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/in_recipe"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/ingredient_price"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ingredient_table"
            android:layout_above="@+id/resultButton"/>
        <Button
            android:id="@+id/resultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/resultButton"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>